fixed mob extra black & desktop new img sizes
I've changed cursor properties. Width was set to 600px which created extra space on the right of the mobile screen version.

--- a/style.css
+++ b/style.css
@@ -218,7 +218,11 @@ opacity: 1;
   display: block;
 }
 
-@media screen and (max-width: 900px){
+@media screen and (max-width: 768px){
+
+.cursor {
+  width:300px;
+  }
 
   .mob-hidden {
     display: none;
